# LQFS

./: .gitignore  Cargo.toml  Makefile.toml  README.md
client/: Cargo.toml  build.rs  index.html  input.css  tailwind.config.js
client/src/: app.rs  file.rs  main.rs
client/style/: output.css
lib/: Cargo.toml
lib/src/: lib.rs
lqfs_lib/: Cargo.toml
lqfs_lib/src/: lib.rs  msg.rs
node/: Cargo.toml  build.rs
node/protos/: messages.proto  services.proto
node/src/: cluster.rs  frag.rs  fs.rs  main.rs  network.rs  node.rs  prelude.rs  storage.rs
node/src/protos/: fragment.proto  service.proto
protos/: services.proto
