[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
persy = "1.4.4"
protobuf = "2.28.0"
raft = "0.7.0"
slog = "2.7.0"
slog-term = "2.9.0"
thiserror = "1.0.44"
uuid = { version = "1.4.0", features = ["v4"]}

[dev-dependencies]
ntest = "0.9.0"
tempfile = "3.7.0"

[build-dependencies]
protobuf-build = { version = "0.14.1", default-features = false }
