[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heed = "0.11.0"
persy = "1.4.4"
prost = "0.11.9"
raft = { version = "0.7.0", default-features = false, features = ["default-logger", "prost-codec"] }
slog = "2.7.0"
slog-term = "2.9.0"
thiserror = "1.0.44"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tonic = "0.9.2"
uuid = { version = "1.4.0", features = ["v4"]}

[dev-dependencies]
ntest = "0.9.0"
tempfile = "3.7.0"

[build-dependencies]
tonic-build = "0.9.2"
